==> dji-sdk/Payload-SDK/samples/sample_c/platform/rtos_freertos/stm32f4_discovery/drivers/BSP/uart.c <==
#include "uart.h"
#include "stm32f4xx_hal.h"
#include "dji_ringbuffer.h"
#include "FreeRTOS.h"
#include "task.h"
#include "osal.h"
#define UART1_READ_BUF_SIZE      64
#define UART1_WRITE_BUF_SIZE     64
#define UART2_READ_BUF_SIZE      64
#define UART2_WRITE_BUF_SIZE     2048
#define UART3_READ_BUF_SIZE      8192
#define UART3_WRITE_BUF_SIZE     2048

void UART_Init(E_UartNum uartNum, uint32_t baudRate)
{
    switch (uartNum) {

#ifdef USING_UART_PORT_1
        case UART_NUM_1: {
            RingBuf_Init(&s_uart1ReadRingBuffer, s_uart1ReadBuf, UART1_READ_BUF_SIZE);
            RingBuf_Init(&s_uart1WriteRingBuffer, s_uart1WriteBuf, UART1_WRITE_BUF_SIZE);

            s_uart1Handle.Instance = USART1;
            s_uart1Handle.Init.BaudRate = baudRate;
            s_uart1Handle.Init.WordLength = UART_WORDLENGTH_8B;
            s_uart1Handle.Init.StopBits = UART_STOPBITS_1;
            s_uart1Handle.Init.Parity = UART_PARITY_NONE;
            s_uart1Handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            s_uart1Handle.Init.Mode = UART_MODE_TX_RX;
            s_uart1Handle.Init.OverSampling = UART_OVERSAMPLING_16;
            HAL_UART_Init(&s_uart1Handle);
            __HAL_UART_ENABLE_IT(&s_uart1Handle, UART_IT_RXNE);

            Osal_MutexCreate(&s_uart1Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_2
        case UART_NUM_2: {
            RingBuf_Init(&s_uart2ReadRingBuffer, s_uart2ReadBuf, UART2_READ_BUF_SIZE);
            RingBuf_Init(&s_uart2WriteRingBuffer, s_uart2WriteBuf, UART2_WRITE_BUF_SIZE);

            s_uart2Handle.Instance = USART2;
            s_uart2Handle.Init.BaudRate = baudRate;
            s_uart2Handle.Init.WordLength = UART_WORDLENGTH_8B;
            s_uart2Handle.Init.StopBits = UART_STOPBITS_1;
            s_uart2Handle.Init.Parity = UART_PARITY_NONE;
            s_uart2Handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            s_uart2Handle.Init.Mode = UART_MODE_TX_RX;
            s_uart2Handle.Init.OverSampling = UART_OVERSAMPLING_16;
            HAL_UART_Init(&s_uart2Handle);
            __HAL_UART_ENABLE_IT(&s_uart2Handle, UART_IT_RXNE);

            Osal_MutexCreate(&s_uart2Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_3
        case UART_NUM_3: {
            RingBuf_Init(&s_uart3ReadRingBuffer, s_uart3ReadBuf, UART3_READ_BUF_SIZE);
            RingBuf_Init(&s_uart3WriteRingBuffer, s_uart3WriteBuf, UART3_WRITE_BUF_SIZE);

            s_uart3Handle.Instance = USART3;
            s_uart3Handle.Init.BaudRate = baudRate;
            s_uart3Handle.Init.WordLength = UART_WORDLENGTH_8B;
            s_uart3Handle.Init.StopBits = UART_STOPBITS_1;
            s_uart3Handle.Init.Parity = UART_PARITY_NONE;
            s_uart3Handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            s_uart3Handle.Init.Mode = UART_MODE_TX_RX;
            s_uart3Handle.Init.OverSampling = UART_OVERSAMPLING_16;
            HAL_UART_Init(&s_uart3Handle);
            __HAL_UART_ENABLE_IT(&s_uart3Handle, UART_IT_RXNE);

            Osal_MutexCreate(&s_uart3Mutex);
        }
            break;
#endif

        default:
            break;
    }
}

int UART_Write(E_UartNum uartNum, const uint8_t *buf, uint16_t writeSize)
{
    int writeRealLen;
    uint16_t usedCapacityOfBuffer = 0;

    switch (uartNum) {

#ifdef USING_UART_PORT_1
        case UART_NUM_1: {
            Osal_MutexLock(s_uart1Mutex);
            writeRealLen = RingBuf_Put(&s_uart1WriteRingBuffer, buf, writeSize);
            __HAL_UART_ENABLE_IT(&s_uart1Handle, UART_IT_TXE);
            usedCapacityOfBuffer = UART1_WRITE_BUF_SIZE - RingBuf_GetUnusedSize(&s_uart1WriteRingBuffer);
            s_uart1WriteBufferState.maxUsedCapacityOfBuffer =
                usedCapacityOfBuffer > s_uart1WriteBufferState.maxUsedCapacityOfBuffer ? usedCapacityOfBuffer
                                                                                       : s_uart1WriteBufferState.maxUsedCapacityOfBuffer;
            s_uart1WriteBufferState.countOfLostData += writeSize - writeRealLen;
            Osal_MutexUnlock(s_uart1Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_2
        case UART_NUM_2: {
            Osal_MutexLock(s_uart2Mutex);
            writeRealLen = RingBuf_Put(&s_uart2WriteRingBuffer, buf, writeSize);
            __HAL_UART_ENABLE_IT(&s_uart2Handle, UART_IT_TXE);
            usedCapacityOfBuffer = UART2_WRITE_BUF_SIZE - RingBuf_GetUnusedSize(&s_uart2WriteRingBuffer);
            s_uart2WriteBufferState.maxUsedCapacityOfBuffer =
                usedCapacityOfBuffer > s_uart2WriteBufferState.maxUsedCapacityOfBuffer ? usedCapacityOfBuffer
                                                                                       : s_uart2WriteBufferState.maxUsedCapacityOfBuffer;
            s_uart2WriteBufferState.countOfLostData += writeSize - writeRealLen;
            Osal_MutexUnlock(s_uart2Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_3
        case UART_NUM_3: {
            Osal_MutexLock(s_uart3Mutex);
            writeRealLen = RingBuf_Put(&s_uart3WriteRingBuffer, buf, writeSize);
            __HAL_UART_ENABLE_IT(&s_uart3Handle, UART_IT_TXE);
            usedCapacityOfBuffer = UART3_WRITE_BUF_SIZE - RingBuf_GetUnusedSize(&s_uart3WriteRingBuffer);
            s_uart3WriteBufferState.maxUsedCapacityOfBuffer =
                usedCapacityOfBuffer > s_uart3WriteBufferState.maxUsedCapacityOfBuffer ? usedCapacityOfBuffer
                                                                                       : s_uart3WriteBufferState.maxUsedCapacityOfBuffer;
            s_uart3WriteBufferState.countOfLostData += writeSize - writeRealLen;
            Osal_MutexUnlock(s_uart3Mutex);
        }
            break;
#endif

        default:
            return UART_ERROR;
    }

    return writeRealLen;
}
