==> dji-sdk/Payload-SDK/samples/sample_c/platform/rtos_freertos/gd32f527_development_board/drivers/BSP/uart.c <==
#include "uart.h"
#include "dji_ringbuffer.h"
#include "FreeRTOS.h"
#include "task.h"
#include "osal.h"
#include "gd32f5xx.h"
#define UART1_READ_BUF_SIZE      2048
#define UART1_WRITE_BUF_SIZE     4096
#define UART2_READ_BUF_SIZE      2048
#define UART2_WRITE_BUF_SIZE     2048
#define UART3_READ_BUF_SIZE      1024
#define UART3_WRITE_BUF_SIZE     4096

void UART_Init(E_UartNum uartNum, uint32_t baudRate)
{
    switch (uartNum) {

#ifdef USING_UART_PORT_1
        case UART_NUM_1: {
            RingBuf_Init(&s_uart1ReadRingBuffer, s_uart1ReadBuf, UART1_READ_BUF_SIZE);
            RingBuf_Init(&s_uart1WriteRingBuffer, s_uart1WriteBuf, UART1_WRITE_BUF_SIZE);

            rcu_periph_clock_enable(RCU_GPIOA);
            rcu_periph_clock_enable(RCU_USART0);

            gpio_af_set(GPIOA, GPIO_AF_7, GPIO_PIN_9);
            gpio_af_set(GPIOA, GPIO_AF_7, GPIO_PIN_10);

            /* configure USART Tx as alternate function push-pull */
            gpio_mode_set(GPIOA, GPIO_MODE_AF, GPIO_PUPD_PULLUP,GPIO_PIN_9);
            gpio_output_options_set(GPIOA, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ,GPIO_PIN_9);

            /* configure USART Rx as alternate function push-pull */
            gpio_mode_set(GPIOA, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_PIN_10);
            gpio_output_options_set(GPIOA, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_10);

            nvic_irq_enable(USART0_IRQn, 0, 0);

            /* USART configure */
            usart_deinit(USART0);
            usart_baudrate_set(USART0,baudRate);
            usart_receive_config(USART0, USART_RECEIVE_ENABLE);
            usart_transmit_config(USART0, USART_TRANSMIT_ENABLE);
            usart_enable(USART0);
            usart_interrupt_enable(USART0, USART_INT_RBNE);

            Osal_MutexCreate(&s_uart1Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_2
        case UART_NUM_2: {
            RingBuf_Init(&s_uart2ReadRingBuffer, s_uart2ReadBuf, UART2_READ_BUF_SIZE);
            RingBuf_Init(&s_uart2WriteRingBuffer, s_uart2WriteBuf, UART2_WRITE_BUF_SIZE);
            Osal_MutexCreate(&s_uart2Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_3
        case UART_NUM_3: {
            RingBuf_Init(&s_uart3ReadRingBuffer, s_uart3ReadBuf, UART3_READ_BUF_SIZE);
            RingBuf_Init(&s_uart3WriteRingBuffer, s_uart3WriteBuf, UART3_WRITE_BUF_SIZE);

            rcu_periph_clock_enable(RCU_GPIOA);
            rcu_periph_clock_enable(RCU_UART3);

            gpio_af_set(GPIOA, GPIO_AF_8, GPIO_PIN_0);
            gpio_af_set(GPIOA, GPIO_AF_8, GPIO_PIN_1);

            /* configure USART Tx as alternate function push-pull */
            gpio_mode_set(GPIOA, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_PIN_0);
            gpio_output_options_set(GPIOA, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_0);

            /* configure USART Rx as alternate function push-pull */
            gpio_mode_set(GPIOA, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_PIN_1);
            gpio_output_options_set(GPIOA, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_PIN_1);

            nvic_irq_enable(UART3_IRQn, 0, 0);

            /* USART configure */
            usart_deinit(UART3);
            usart_baudrate_set(UART3,baudRate);
            usart_receive_config(UART3, USART_RECEIVE_ENABLE);
            usart_transmit_config(UART3, USART_TRANSMIT_ENABLE);
            usart_enable(UART3);
            usart_interrupt_enable(UART3, USART_INT_RBNE);

            Osal_MutexCreate(&s_uart3Mutex);
        }
            break;
#endif

        default:
            break;
    }
}

int UART_Write(E_UartNum uartNum, const uint8_t *buf, uint16_t writeSize)
{
    int writeRealLen;
    uint16_t usedCapacityOfBuffer = 0;

    switch (uartNum) {

#ifdef USING_UART_PORT_1
        case UART_NUM_1: {
           Osal_MutexLock(s_uart1Mutex);
           writeRealLen = RingBuf_Put(&s_uart1WriteRingBuffer, buf, writeSize);

           /* enable USART TBE interrupt */
           usart_interrupt_enable(USART0, USART_INT_TBE);
           usedCapacityOfBuffer = UART1_WRITE_BUF_SIZE - RingBuf_GetUnusedSize(&s_uart1WriteRingBuffer);
           s_uart1WriteBufferState.maxUsedCapacityOfBuffer =
               usedCapacityOfBuffer > s_uart1WriteBufferState.maxUsedCapacityOfBuffer ? usedCapacityOfBuffer
                                                                                      : s_uart1WriteBufferState.maxUsedCapacityOfBuffer;
           s_uart1WriteBufferState.countOfLostData += writeSize - writeRealLen;
           Osal_MutexUnlock(s_uart1Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_2
        case UART_NUM_2: {
//            Osal_MutexLock(s_uart2Mutex);
//            writeRealLen = RingBuf_Put(&s_uart2WriteRingBuffer, buf, writeSize);
//            __HAL_USART_ENABLE_IT(&s_uart2Handle, USART_IT_TXE);
//            usedCapacityOfBuffer = UART2_WRITE_BUF_SIZE - RingBuf_GetUnusedSize(&s_uart2WriteRingBuffer);
//            s_uart2WriteBufferState.maxUsedCapacityOfBuffer =
//                usedCapacityOfBuffer > s_uart2WriteBufferState.maxUsedCapacityOfBuffer ? usedCapacityOfBuffer
//                                                                                       : s_uart2WriteBufferState.maxUsedCapacityOfBuffer;
//            s_uart2WriteBufferState.countOfLostData += writeSize - writeRealLen;
//            Osal_MutexUnlock(s_uart2Mutex);
        }
            break;
#endif

#ifdef USING_UART_PORT_3
        case UART_NUM_3: {
           Osal_MutexLock(s_uart3Mutex);
           writeRealLen = RingBuf_Put(&s_uart3WriteRingBuffer, buf, writeSize);

           /* enable USART TBE interrupt */
           usart_interrupt_enable(UART3, USART_INT_TBE);
           usedCapacityOfBuffer = UART3_WRITE_BUF_SIZE - RingBuf_GetUnusedSize(&s_uart3WriteRingBuffer);
           s_uart3WriteBufferState.maxUsedCapacityOfBuffer =
               usedCapacityOfBuffer > s_uart3WriteBufferState.maxUsedCapacityOfBuffer ? usedCapacityOfBuffer
                                                                                      : s_uart3WriteBufferState.maxUsedCapacityOfBuffer;
           s_uart3WriteBufferState.countOfLostData += writeSize - writeRealLen;
           Osal_MutexUnlock(s_uart3Mutex);
        }
            break;
#endif

        default:
            return UART_ERROR;
    }

    return writeRealLen;
}
